# Agent-libOS

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  agent_libos_design_doc.md  config.yaml  plan.md  pyproject.toml  tool_ref.md
.github/workflows/: external-effect-recovery-scale.yml  test.yml
agent_libos/: __init__.py  __main__.py  exceptions.py  models.py  process_execution.py  process_transition.py
agent_libos/api/: __init__.py  cli.py
agent_libos/capability/: __init__.py  admission.py  effect_binding.py  evaluator.py  lease.py  manager.py  mutation.py  profiles.py  resources.py  rules.py  transaction.py
agent_libos/config/: __init__.py  defaults.py  loader.py
agent_libos/evidence/: __init__.py  external_effects.py  payload_retention.py
agent_libos/human/: __init__.py  delivery.py  descriptors.py  manager.py  presentation.py  requests.py
agent_libos/images/: __init__.py  base_agent.py
agent_libos/llm/: __init__.py  action_parser.py  actions.py  client.py  context_memory.py  context_protocol.py  descriptors.py  executor.py  openai_schema.py  pending.py  profiles.py  prompt.py  provider_service.py  records.py  tool_protocol.py  user_profiles.py
agent_libos/memory/: __init__.py  data_labels.py  object_memory.py
agent_libos/models/: __init__.py  audit.py  authority_manifest.py  base.py  capability.py  checkpoint.py  data_flow.py  events.py  exceptions.py  external_effect.py  git.py  human.py  jsonrpc.py  llm.py  mcp.py  memory.py  messages.py  object_tasks.py  operations.py  policy.py  process.py  publication.py  (+5 more)
benchmarks/: __init__.py
docs/: architecture.md  artifact_anonymity.md  benchmark.md  capabilities.md  checkpoints.md  cli.md  configuration.md  data_flow.md  development.md  evidence_payload_retention.md  explainable_operations.md  git.md  gui.md  gui_api_schema.json  invariants.md  jsonrpc.md  mcp.md  mini_swe_agent_image.md  modules.md  object_memory.md  paper_thesis.md  prelaunch_hardening_report.md  protected_operation_sdk.md  providers.md  release_status.md  runtime_model.md  skills.md  storage.md  support_matrix.md  task_authority_manifest.md  tools_and_jit.md
experiments/: collect_metrics.py  run_benchmark.py  run_external_effect_recovery_scale.py  run_practical_evaluation.py  run_publication_reconciliation_scale.py
gui/: index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
scripts/: agent_outputs.py  architecture_allowlist.json  ask_file_then_show.py  async_clock_interleave_smoke.py  benchmark_core_latency.py  check_architecture.py  check_protected_operations.py  check_release_artifacts.py  check_test_invariants.py  clean_agent_outputs.py  human_llm_chat.py  llm_context_probe.py  llm_summarize_document.py  llm_write_goal_smoke.py  object_memory_file_copy_smoke.py  run_coding_agent.py  runtime_assembly.py  testChat.py  testCoding.py  test_matrix.py
skills/: swe_agent.yaml
tests/: conftest.py  invariants.yaml  test_ask_file_then_show_script.py  test_async_scheduler.py  test_capability_v2.py  test_checkpoint_manager.py  test_child_process_tools.py  test_cli_builtin_commands.py  test_clock_tools.py  test_coding_agent_image.py  test_coding_agent_launcher.py  test_config_defaults.py  test_demo_contract.py  test_external_boundaries.py  test_filesystem_directory_tools.py  test_granular_permissions.py  test_gui_server.py  test_human_llm_chat_script.py  test_human_question_tool.py  test_image_commit.py  test_image_registration.py  test_jsonrpc_primitive.py  test_llm_client.py  test_llm_context_memory.py  test_llm_tool_protocol.py  test_object_file_tools.py  test_object_memory.py  test_permission_policy.py  test_persistent_runtime.py  test_process_messages.py  test_process_working_directory.py  test_resource_substrate.py  test_runtime_modules.py  test_runtime_mvp.py  test_runtime_safety_benchmark.py  test_runtime_shutdown.py  test_shell_primitive.py  test_skills_dynamic_loading.py  test_stage2_security.py  test_swe_agent_skill.py
(+425 files in other folders)
