[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-libos"
version = "0.1.0"
description = "A minimal Agent libOS runtime with process, object memory, capability, human approval, JIT tool, checkpoint, and audit primitives."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Agent libOS contributors" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "openai>=2.41.1",
    "pydantic>=2.13.4",
]

[project.scripts]
agent-libos = "agent_libos.api.cli:main"
agent-libos-gui-server = "agent_libos.api.gui.server:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_libos"]
