[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-libos"
version = "0.1.0"
description = "A minimal Agent libOS runtime with process, object memory, capability, human approval, JIT tool, checkpoint, and audit primitives."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Agent libOS contributors" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "openai>=2.43.0",
    "psutil>=7.0.0",
    "pydantic>=2.13.4",
    "jsonschema>=4.25.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
pty = [
    "pywinpty>=2.0.13; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=6.2.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
agent-libos = "agent_libos.api.cli:main"
agent-libos-gui-server = "agent_libos.api.gui.server:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_libos"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-config", "--strict-markers", "-ra"]
timeout = 120
filterwarnings = [
    "error::RuntimeWarning",
    "default::DeprecationWarning",
]
markers = [
    "unit: fast pure-Python and parser/model tests",
    "runtime: runtime lifecycle, scheduler, process, persistence, and memory tests",
    "security: capability, policy, approval, filesystem, shell, and JIT containment tests",
    "self_evolution: Skill, checkpoint, image, launcher, and agent self-evolution tests",
    "providers: provider substrate, CLI, GUI server, JSON-RPC, clock, and script smoke tests",
    "benchmark: deterministic runtime-safety benchmark harness tests",
    "invariant(id): runtime safety invariant covered by the test",
    "real_deno: runs by default when deno is installed; use --skip-real-deno to skip",
    "real_llm: requires --run-real-llm and OpenAI-compatible credentials",
]
